style.css
/* CSS files add styling rules to your content */

body {
  font-family: helvetica, arial, sans-serif;
  background-color:#DAEBEF;
}
/* This needs to be overridden in the scss file */
.nav-link {
  color: red;
}

h1 {
  text-align: center;
  margin: 4%;
  color: #8A9B9F;
}
.about{
}

#ourvalues {
  margin-top: 10px;
  margin-bottom: 10px;
  /*padding:2%;*/
  overflow: hidden;
  width: 100%;
}
#ourvalues ul{
  list-style-type: none;
  padding: 0;
  margin: 0 auto;
  width: 55em;
}
#ourvalues ul li{
  font-weight: normal;
  font-size: 1em;
  float: left;
  display: block;
  padding: 2em;
  border: 1px solid #A4C4E0;
  border-top-left-radius: .5em;
  border-top-right-radius: .5em;
  margin: .25em;
  background-color:#A4C4E0;
  color:black;
}

.col-sm-9{
  background-color:white;
  padding-top:2%;
  padding-bottom:2%;
}

.col-sm-9 h4{
  background-color:#A4C4E0;
  color:black;
  margin-left: 5px;
  padding-left: 5px;
  margin-right: 20px;
  padding-right: 10px;
}
.col-sm-9 p{
  margin-left: 5px;
  padding-left: 5px;
  margin-right: 20px;
  padding-right: 10px;
  /*text-indent: 1.5em;*/
}
.col-sm-3 {
  align-items: center;
  padding-left: 20px;
}
.our-purpose {
  text-align: left;
  margin-top: 3%;
  margin-bottom: 3%;
}

.click-here{
  text-align:center;
}

.about img{
  border:grey 5px solid;
}

#brand-image {
height:50px;
}

.blog {
  background-color: white;
  margin-right:5%;
  margin-bottom:5%;
  text-align:center;
  padding-top:2%;
  padding-bottom:2%;
}

button {
  background-color:white;
  border:none;
  color:black;
  font-size:150%;
  padding:1%;
}
.button-values {
  background-color:#A4C4E0;
  border:none;
  color:black;
  font-size:150%;
  padding:1%;
}

